@@ -1,6 +1,12 @@
 2007-04-17  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/asfparse.py:
+	  Add some code to dump the first few bytes of unknown packets so we
+	  can inspect them later.
+
+2007-04-17  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/asfparse.py:
 	  Fix logic for skipping unknown packet types ('F' occurred in
 	  testing) so we don't try and parse it as an ASF data packet, and
 	  then fail.
